--- a/index.html
+++ b/index.html
@@ -59,33 +59,33 @@
       </section>
       <!-- OUR WORK -->
       <section class="section">
-        <div class="container our-advanatages-container">
+        <div class="container our-advantages-container">
           <h2 class="visually-hidden">Наши преимущества</h2>
-          <ul class="list our-advanatages-list">
-            <li class="our-advanatages-item">
-              <h3 class="our-advanatages-title">Внимание к деталям</h3>
-              <p class="our-advanatages-text">
+          <ul class="list our-advantages-list">
+            <li class="our-advantages-item">
+              <h3 class="our-advantages-title">Внимание к деталям</h3>
+              <p class="our-advantages-text">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li class="our-advanatages-item">
-              <h3 class="our-advanatages-title">Пунктуальность</h3>
-              <p class="our-advanatages-text">
+            <li class="our-advantages-item">
+              <h3 class="our-advantages-title">Пунктуальность</h3>
+              <p class="our-advantages-text">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li class="our-advanatages-item">
-              <h3 class="our-advanatages-title">Планирование</h3>
-              <p class="our-advanatages-text">
+            <li class="our-advantages-item">
+              <h3 class="our-advantages-title">Планирование</h3>
+              <p class="our-advantages-text">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li class="our-advanatages-item">
-              <h3 class="our-advanatages-title">Современные технологии</h3>
-              <p class="our-advanatages-text">
+            <li class="our-advantages-item">
+              <h3 class="our-advantages-title">Современные технологии</h3>
+              <p class="our-advantages-text">
                 Значимость этих проблем настолько очевидна, что реализация
                 плановых заданий.
               </p>
@@ -94,7 +94,7 @@
         </div>
       </section>
       <section class="our-work">
-        <div class="container our-work-container">
+        <div class="container">
           <h2 class="our-work-main-title">Чем мы занимаемся</h2>
           <ul class="list our-work-list">
             <li class="our-work-list-item">
@@ -126,7 +126,7 @@
       </section>
       <!-- TEAM -->
       <section class="our-team section">
-        <div class="container our-team-container">
+        <div class="container">
           <h2 class="our-team-main-title">Наша команда</h2>
           <ul class="list our-team-list">
             <li class="our-team-item">
@@ -135,8 +135,10 @@
                 alt="Игорь Демьяненко"
                 width="270"
               />
-              <h3 class="our-team-title">Игорь Демьяненко</h3>
-              <p class="our-team-text" lang="en">Product Designer</p>
+              <div class="our-team-card">
+                <h3 class="our-team-title">Игорь Демьяненко</h3>
+                <p class="our-team-text" lang="en">Product Designer</p>
+              </div>
             </li>
             <li class="our-team-item">
               <img
@@ -144,8 +146,10 @@
                 alt="Ольга Репина"
                 width="270"
               />
-              <h3 class="our-team-title">Ольга Репина</h3>
-              <p class="our-team-text" lang="en">Frontend Developer</p>
+              <div class="our-team-card">
+                <h3 class="our-team-title">Ольга Репина</h3>
+                <p class="our-team-text" lang="en">Frontend Developer</p>
+              </div>
             </li>
             <li class="our-team-item">
               <img
@@ -153,8 +157,10 @@
                 alt="Николай Тарасов"
                 width="270"
               />
-              <h3 class="our-team-title">Николай Тарасов</h3>
-              <p class="our-team-text" lang="en">Marketing</p>
+              <div class="our-team-card">
+                <h3 class="our-team-title">Николай Тарасов</h3>
+                <p class="our-team-text" lang="en">Marketing</p>
+              </div>
             </li>
             <li class="our-team-item">
               <img
@@ -162,8 +168,10 @@
                 alt="Михаил Ермаков"
                 width="270"
               />
-              <h3 class="our-team-title">Михаил Ермаков</h3>
-              <p class="our-team-text" lang="en">UI Designer</p>
+              <div class="our-team-card">
+                <h3 class="our-team-title">Михаил Ермаков</h3>
+                <p class="our-team-text" lang="en">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
