--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
+    />
     <title>Портфолио</title>
   </head>
   <body>
@@ -49,7 +53,7 @@
       </div>
     </header>
     <main class="">
-      <div class="container section portfolio-container">
+      <div class="container section">
         <!-- PORTFOLIO -->
         <h1 class="visually-hidden" lang="en">Portfolio</h1>
         <ul class="portfolio-button-list list">
