--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </header>
     <main>
       <!-- HERO -->
-      <section class="hero section">
+      <section class="hero">
         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
         <button class="hero-button" type="button">Заказать услугу</button>
       </section>
