Final mentor corrections

--- a/portfolio.html
+++ b/portfolio.html
@@ -52,152 +52,154 @@
         </ul>
       </div>
     </header>
-    <main class="">
-      <div class="container section">
-        <!-- PORTFOLIO -->
-        <h1 class="visually-hidden" lang="en">Portfolio</h1>
-        <ul class="portfolio-button-list list">
-          <li class="portfolio-button-item">
-            <button class="portfolio-button button" type="button">Все</button>
-          </li>
-          <li class="portfolio-button-item">
-            <button class="portfolio-button button" type="button">
-              Веб-сайты
-            </button>
-          </li>
-          <li class="portfolio-button-item">
-            <button class="portfolio-button button" type="button">
-              Приложения
-            </button>
-          </li>
-          <li class="portfolio-button-item">
-            <button class="portfolio-button button" type="button">
-              Дизайн
-            </button>
-          </li>
-          <li class="portfolio-button-item">
-            <button class="portfolio-button button" type="button">
-              Маркетинг
-            </button>
-          </li>
-        </ul>
-        <h2 class="visually-hidden">Наши проекты</h2>
-        <ul class="list portfolio-card-list">
-          <li class="portfolio-card">
-            <img
-              src="./imagies/portfolio/img-11.jpeg"
-              alt="Веб-сайт"
-              width="370"
-            />
-            <div class="portfolio-card-item">
-              <h3 class="portfolio-subtitle">Технокряк</h3>
-              <p class="portfolio-text">Веб-сайт</p>
-            </div>
-          </li>
-          <li class="portfolio-card">
-            <img
-              src="./imagies/portfolio/img-22.jpeg"
-              alt="Дизайн"
-              width="370"
-            />
-            <div class="portfolio-card-item">
-              <h3 class="portfolio-subtitle">
-                Постер <span lang="en"> Orlean vs Golden Star</span>
-              </h3>
-              <p class="portfolio-text">Дизайн</p>
-            </div>
-          </li>
-          <li class="portfolio-card">
-            <img
-              src="./imagies/portfolio/img-33.jpeg"
-              alt="Приложение"
-              width="370"
-            />
-            <div class="portfolio-card-item">
-              <h3 class="portfolio-subtitle">
-                Ресторан <span lang="en">Seafood</span>
-              </h3>
-              <p class="portfolio-text">Приложение</p>
-            </div>
-          </li>
-          <li class="portfolio-card">
-            <img
-              src="./imagies/portfolio/img-44.jpeg"
-              alt="Маркетинг"
-              width="370"
-            />
-            <div class="portfolio-card-item">
-              <h3 class="portfolio-subtitle">
-                Проект <span lang="en">Prime</span>P
-              </h3>
-              <p class="portfolio-text">Маркетинг</p>
-            </div>
-          </li>
-          <li class="portfolio-card">
-            <img
-              src="./imagies/portfolio/img-55.jpeg"
-              alt="Приложение"
-              width="370"
-            />
-            <div class="portfolio-card-item">
-              <h3 class="portfolio-subtitle">
-                Проект <span lang="en">Boxes</span>
-              </h3>
-              <p class="portfolio-text">Приложение</p>
-            </div>
-          </li>
-          <li class="portfolio-card">
-            <img
-              src="./imagies/portfolio/img-66.jpeg"
-              alt="Веб-сайт"
-              width="370"
-            />
-            <div class="portfolio-card-item">
-              <h3 class="portfolio-subtitle" lang="en">
-                Inspiration has no Borders
-              </h3>
-              <p class="portfolio-text">Веб-сайт</p>
-            </div>
-          </li>
-          <li class="portfolio-card">
-            <img
-              src="./imagies/portfolio/img-77.jpeg"
-              alt="Дизайн"
-              width="370"
-            />
-            <div class="portfolio-card-item">
-              <h3 class="portfolio-subtitle">
-                Издание <span lang="en">Limited Edition</span>
-              </h3>
-              <p class="portfolio-text">Дизайн</p>
-            </div>
-          </li>
-          <li class="portfolio-card">
-            <img
-              src="./imagies/portfolio/img-88.jpeg"
-              alt="Маркетинг"
-              width="370"
-            />
-            <div class="portfolio-card-item">
-              <h3 class="portfolio-subtitle">
-                Проект <span lang="en">LAB</span>
-              </h3>
-              <p class="portfolio-text">Маркетинг</p>
-            </div>
-          </li>
-          <li class="portfolio-card">
-            <img
-              src="./imagies/portfolio/img-99.jpeg"
-              alt="Приложение"
-              width="370"
-            />
-            <div class="portfolio-card-item">
-              <h3 class="portfolio-subtitle" lang="en">Growing Business</h3>
-              <p class="portfolio-text">Приложение</p>
-            </div>
-          </li>
-        </ul>
-      </div>
+    <main>
+      <section class="section">
+        <div class="container">
+          <!-- PORTFOLIO -->
+          <h1 class="visually-hidden" lang="en">Portfolio</h1>
+          <ul class="portfolio-button-list list">
+            <li class="portfolio-button-item">
+              <button class="portfolio-button button" type="button">Все</button>
+            </li>
+            <li class="portfolio-button-item">
+              <button class="portfolio-button button" type="button">
+                Веб-сайты
+              </button>
+            </li>
+            <li class="portfolio-button-item">
+              <button class="portfolio-button button" type="button">
+                Приложения
+              </button>
+            </li>
+            <li class="portfolio-button-item">
+              <button class="portfolio-button button" type="button">
+                Дизайн
+              </button>
+            </li>
+            <li class="portfolio-button-item">
+              <button class="portfolio-button button" type="button">
+                Маркетинг
+              </button>
+            </li>
+          </ul>
+          <h2 class="visually-hidden">Наши проекты</h2>
+          <ul class="list portfolio-card-list">
+            <li class="portfolio-card">
+              <img
+                src="./imagies/portfolio/img-11.jpeg"
+                alt="Веб-сайт"
+                width="370"
+              />
+              <div class="portfolio-card-item">
+                <h3 class="portfolio-subtitle">Технокряк</h3>
+                <p class="portfolio-text">Веб-сайт</p>
+              </div>
+            </li>
+            <li class="portfolio-card">
+              <img
+                src="./imagies/portfolio/img-22.jpeg"
+                alt="Дизайн"
+                width="370"
+              />
+              <div class="portfolio-card-item">
+                <h3 class="portfolio-subtitle">
+                  Постер <span lang="en"> Orlean vs Golden Star</span>
+                </h3>
+                <p class="portfolio-text">Дизайн</p>
+              </div>
+            </li>
+            <li class="portfolio-card">
+              <img
+                src="./imagies/portfolio/img-33.jpeg"
+                alt="Приложение"
+                width="370"
+              />
+              <div class="portfolio-card-item">
+                <h3 class="portfolio-subtitle">
+                  Ресторан <span lang="en">Seafood</span>
+                </h3>
+                <p class="portfolio-text">Приложение</p>
+              </div>
+            </li>
+            <li class="portfolio-card">
+              <img
+                src="./imagies/portfolio/img-44.jpeg"
+                alt="Маркетинг"
+                width="370"
+              />
+              <div class="portfolio-card-item">
+                <h3 class="portfolio-subtitle">
+                  Проект <span lang="en">Prime</span>P
+                </h3>
+                <p class="portfolio-text">Маркетинг</p>
+              </div>
+            </li>
+            <li class="portfolio-card">
+              <img
+                src="./imagies/portfolio/img-55.jpeg"
+                alt="Приложение"
+                width="370"
+              />
+              <div class="portfolio-card-item">
+                <h3 class="portfolio-subtitle">
+                  Проект <span lang="en">Boxes</span>
+                </h3>
+                <p class="portfolio-text">Приложение</p>
+              </div>
+            </li>
+            <li class="portfolio-card">
+              <img
+                src="./imagies/portfolio/img-66.jpeg"
+                alt="Веб-сайт"
+                width="370"
+              />
+              <div class="portfolio-card-item">
+                <h3 class="portfolio-subtitle" lang="en">
+                  Inspiration has no Borders
+                </h3>
+                <p class="portfolio-text">Веб-сайт</p>
+              </div>
+            </li>
+            <li class="portfolio-card">
+              <img
+                src="./imagies/portfolio/img-77.jpeg"
+                alt="Дизайн"
+                width="370"
+              />
+              <div class="portfolio-card-item">
+                <h3 class="portfolio-subtitle">
+                  Издание <span lang="en">Limited Edition</span>
+                </h3>
+                <p class="portfolio-text">Дизайн</p>
+              </div>
+            </li>
+            <li class="portfolio-card">
+              <img
+                src="./imagies/portfolio/img-88.jpeg"
+                alt="Маркетинг"
+                width="370"
+              />
+              <div class="portfolio-card-item">
+                <h3 class="portfolio-subtitle">
+                  Проект <span lang="en">LAB</span>
+                </h3>
+                <p class="portfolio-text">Маркетинг</p>
+              </div>
+            </li>
+            <li class="portfolio-card">
+              <img
+                src="./imagies/portfolio/img-99.jpeg"
+                alt="Приложение"
+                width="370"
+              />
+              <div class="portfolio-card-item">
+                <h3 class="portfolio-subtitle" lang="en">Growing Business</h3>
+                <p class="portfolio-text">Приложение</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="container footer-container">
